--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 		<header class="header">
   			<div class="container">
     			<div class="header-nav-wrp">
-      				<img class="logo-img" src="svg/noemi-logo.svg" alt="Логотип">
-      				<nav>
+      				<a href="#0" class="logo-link"><img class="logo-img" src="svg/noemi-logo.svg" alt="Логотип"></a>
+      				<nav class="menu-header">
+      					<button class="menu-button">
+      						<span class="visually-hidden">открыть меню</span>
+        				</button>
         				<ul class="sections-list">
           					<li class="sections-list-item"><a href="#0" class="section-item">Главная</a>
           					</li>
@@ -200,64 +203,58 @@
       				</form>
     			</section>
     			<section class="aside-section">
-      				<div class="aside-mailing">
-      					<h2 class="posts-title">Рассылка</h2>
-      					<form action="#0">
-        					<label>
-          						<span class="visually-hidden">Введите ваш e-mail</span>
-          						<input type="email" class="aside-email" placeholder="Ваш email-адрес" required>
-        					</label>
-        					<button class="mailing-button" name="email">Подписаться</button>
-      					</form>
-        			</div>
+      				<h2 class="posts-title">Рассылка</h2>
+      				<form action="#0" class="form-aside-mailing">
+        				<label>
+          					<span class="visually-hidden">Введите ваш e-mail</span>
+          					<input type="email" class="aside-email" placeholder="Ваш email-адрес" required>
+        				</label>
+        				<button class="mailing-button" name="email">Подписаться</button>
+      				</form>
     			</section>
     			<section class="aside-section">
-      				<div class="aside-tegs">
-      					<h2 class="posts-title">Теги</h2>
-      					<ul class="tegs-list">
-        					<li class="tegs-list-item"><a href="#0" class="tegs-item-link">Fashion</a>
-        					</li>
-        					<li class="tegs-list-item"><a href="#0" class="tegs-item-link">Music</a>
-        					</li>
-        					<li class="tegs-list-item"><a href="#0" class="tegs-item-link">Lifestyle</a>
-        					</li>
-        					<li class="tegs-list-item"><a href="#0" class="tegs-item-link">Art</a>
-        					</li>
-        					<li class="tegs-list-item"><a href="#0" class="tegs-item-link">Interior</a>
-        					</li>
-        					<li class="tegs-list-item"><a href="#0" class="tegs-item-link">Travel</a>
-        					</li>
-        					<li class="tegs-list-item"><a href="#0" class="tegs-item-link">Food</a>
-        					</li>
-        					<li class="tegs-list-item"><a href="#0" class="tegs-item-link">Health</a>
-        					</li>
-      					</ul>
-      				</div>
+      				<h2 class="posts-title">Теги</h2>
+      				<ul class="tegs-list">
+        				<li class="tegs-list-item"><a href="#0" class="tegs-item-link">Fashion</a>
+        				</li>
+        				<li class="tegs-list-item"><a href="#0" class="tegs-item-link">Music</a>
+        				</li>
+        				<li class="tegs-list-item"><a href="#0" class="tegs-item-link">Lifestyle</a>
+        				</li>
+        				<li class="tegs-list-item"><a href="#0" class="tegs-item-link">Art</a>
+        				</li>
+        				<li class="tegs-list-item"><a href="#0" class="tegs-item-link">Interior</a>
+        				</li>
+        				<li class="tegs-list-item"><a href="#0" class="tegs-item-link">Travel</a>
+        				</li>
+        				<li class="tegs-list-item"><a href="#0" class="tegs-item-link">Food</a>
+        				</li>
+        				<li class="tegs-list-item"><a href="#0" class="tegs-item-link">Health</a>
+        				</li>
+      				</ul>
     			</section>
     			<section class="aside-section">
-      				<div class="aside-themes">
-      					<h2 class="posts-title">Темы</h2>
-      					<ul class="themes-list">
-        					<li class="themes-list-item"><a href="#0" class="article-title-link">Красота</a>
-          						<span class="number-articles">12</span>
-        					</li>
-        					<li class="themes-list-item"><a href="#0" class="article-title-link">Здоровье</a>
-          						<span class="number-articles">4</span>
-        					</li>
-        					<li class="themes-list-item"><a href="#0" class="article-title-link">Образ жизни</a>
-          						<span class="number-articles">145</span>
-        					</li>
-        					<li class="themes-list-item"><a href="#0" class="article-title-link">Музыка</a>
-          						<span class="number-articles">28</span>
-        					</li>
-        					<li class="themes-list-item"><a href="#0" class="article-title-link">Спорт</a>
-          						<span class="number-articles">62</span>
-        					</li>
-        					<li class="themes-list-item"><a href="#0" class="article-title-link">Йога</a>
-          						<span class="number-articles">8</span>
-        					</li>
-      					</ul>
-      				</div>
+      				<h2 class="posts-title">Темы</h2>
+      				<ul class="themes-list">
+        				<li class="themes-list-item"><a href="#0" class="article-title-link">Красота</a>
+          					<span class="number-articles">12</span>
+        				</li>
+        				<li class="themes-list-item"><a href="#0" class="article-title-link">Здоровье</a>
+          					<span class="number-articles">4</span>
+        				</li>
+        				<li class="themes-list-item"><a href="#0" class="article-title-link">Образ жизни</a>
+          					<span class="number-articles">145</span>
+        				</li>
+        				<li class="themes-list-item"><a href="#0" class="article-title-link">Музыка</a>
+          					<span class="number-articles">28</span>
+        				</li>
+        				<li class="themes-list-item"><a href="#0" class="article-title-link">Спорт</a>
+          					<span class="number-articles">62</span>
+        				</li>
+        				<li class="themes-list-item"><a href="#0" class="article-title-link">Йога</a>
+          					<span class="number-articles">8</span>
+        				</li>
+      				</ul>
     			</section>
   			</aside>
 		</div>
@@ -266,7 +263,12 @@
 				<h2 class="section-title">Наши изделия</h2>
 				<div class="shop-content">	
 					<article class="product">
-        				<img class="product-img" src="images/shop-item-desk1.jpg" alt="Изображение товара">
+						<picture class="product-picture">
+							<source media="(min-width: 1201px)" srcset="images/shop-item-desk1.jpg">
+							<source media="(min-width: 641px)" srcset="images/shop-item-tablet1.jpg">
+      						<source media="(max-width: 640px)" srcset="images/shop-item-mobile1.jpg"> 
+      						<img class="product-img" src="images/shop-item-desk1.jpg" alt="Изображение товара">
+						</picture>
           				<div class="product-content">
           					<h3 class="product-title">Подушки на диван</h3>
            					<p class="product-description">Набор из двух подушек с модными принтами. Видео о создании <a href="#0" class="section-item"><span>здесь</span></a>.</p>
@@ -282,7 +284,12 @@
         				</div>
     				</article>
     				<article class="product">
-        				<img class="product-img" src="images/shop-item-desk2.jpg" alt="Изображение товара">
+        				<picture class="product-picture">
+							<source media="(min-width: 1201px)" srcset="images/shop-item-desk2.jpg">
+							<source media="(min-width: 641px)" srcset="images/shop-item-tablet2.jpg">
+      						<source media="(max-width: 640px)" srcset="images/shop-item-mobile2.jpg"> 
+      						<img class="product-img" src="images/shop-item-desk2.jpg" alt="Изображение товара">
+						</picture>
           				<div class="product-content">
           					<h3 class="product-title">Кукла "Зайчик"</h3>
            					<p class="product-description">Интерьерная кукла "Зайчик", созданию которой посвящена <a href="#0" class="section-item"><span>весенняя серия постов </span></a>в блоге и несколько подкастов.</p>
@@ -298,7 +305,12 @@
         				</div>
     				</article>
     				<article class="product">
-        				<img class="product-img" src="images/shop-item-desk3.jpg" alt="Изображение товара">
+        				<picture class="product-picture">
+							<source media="(min-width: 1201px)" srcset="images/shop-item-desk3.jpg">
+							<source media="(min-width: 641px)" srcset="images/shop-item-tablet3.jpg">
+      						<source media="(max-width: 640px)" srcset="images/shop-item-mobile3.jpg"> 
+      						<img class="product-img" src="images/shop-item-desk3.jpg" alt="Изображение товара">
+						</picture>
           				<div class="product-content">
           					<h3 class="product-title">Шестиугольная рамка</h3>
            					<p class="product-description">Необычная рамка для украшения дома из видео <a href="#0" class="section-item"><span>"Как сделать рамку из подручных средств за 30 минут"</span></a></p>
@@ -316,46 +328,53 @@
     			</div>
     		</section>
     	</div>
-		<footer class="footer-information">
-			<ul class="widget-socials">
-				<li class="widget-list-item"><span class="visually-hidden">dribble</span><a href="#0" class="widget-link-dribble"></a>
-				</li>
-				<li class="widget-list-item"><span class="visually-hidden">pinterest</span><a href="#0" class="widget-link-pinterest"></a>
-				</li>
-				<li class="widget-list-item"><span class="visually-hidden">tumblr</span><a href="#0" class="widget-link-tumblr"></a>
-				</li>
-			</ul>
-  			<a href="#0" class="copyright">Copyright © 2009–2019 City Blog LLC.</a>
-		</footer>
-		<div class="popup-hidden">	
-			<section class="popup-content">
-        		<h3 class="section-title">Ваш фидбек</h3> 
-        		<form action="#0" class="popup-form">
-              		<div class="question">Как часто вы заходите на сайт?</div>
-              		<select class="options-of-answer-visit-site" name="visit-site">
-              			<option class="answer-visit-site" selected>Почти каждый день</option>
-              			<option class="answer-visit-site">Раз в несколько дней</option>
-              			<option class="answer-visit-site">Раз в несколько недель</option>
-              			<option class="answer-visit-site">Несколько раз в год</option>
-              		</select> 
-            		<div class="question">Вы подписаны на e-mail рассылку?</div>
-              		<div class="options-of-answer-mailing">
-              			<label class="text-of-answer">
-              				<input type="radio" class="answer-mailing" name="mailing" checked>
-              				Да
-              			</label>
-              			<label class="text-of-answer">
-              				<input type="radio" class="answer-mailing" name="mailing">
-              				Нет
-              			</label>
-              		</div>
-              		<div class="question">Расскажите, какой контент выхотели бы видеть на нашем сайте?</div>
-              		<textarea class="review-type-of-content" name="type-of-content" required>Может, больше рецептов?
-              		</textarea>
-              		<button type="submit" class="popup-button-submit">Отправить</button>
-            	</form>
-            	<button class="popup-close"></button>
-            </section>
+		<div class="container">
+			<footer class="footer-information">
+				<ul class="widget-socials">
+					<li class="widget-list-item"><span class="visually-hidden">dribble</span><a href="#0" class="widget-link-dribble"></a>
+					</li>
+					<li class="widget-list-item"><span class="visually-hidden">pinterest</span><a href="#0" class="widget-link-pinterest"></a>
+					</li>
+					<li class="widget-list-item"><span class="visually-hidden">tumblr</span><a href="#0" class="widget-link-tumblr"></a>
+					</li>
+				</ul>
+  				<a href="#0" class="copyright">Copyright © 2009–2019 City Blog LLC.</a>
+			</footer>
+	    </div>
+		<div class="popup-hidden">
+			<div class="popup">
+				<div class="popup-dark-background"></div>
+				<div class="popup-close">
+					<button class="popup-close-button"></button>	
+				</div>
+				<section class="popup-content">
+        			<h3 class="section-title">Ваш фидбек</h3> 
+        			<form action="#0" class="popup-form">
+              			<div class="question">Как часто вы заходите на сайт?</div>
+              			<select class="options-of-answer-visit-site" name="visit-site">
+              				<option class="answer-visit-site" selected>Почти каждый день</option>
+              				<option class="answer-visit-site">Раз в несколько дней</option>
+              				<option class="answer-visit-site">Раз в несколько недель</option>
+              				<option class="answer-visit-site">Несколько раз в год</option>
+              			</select> 
+            			<div class="question">Вы подписаны на e-mail рассылку?</div>
+              			<div class="options-of-answer-mailing">
+              				<label class="box-of-answer-mailing">
+              					<input type="radio" class="checkbox-answer-mailing" name="mailing" checked>
+              					<span class="checkbox-text">Да</span>
+              				</label>
+              				<label class="box-of-answer-mailing">
+              					<input type="radio" class="checkbox-answer-mailing" name="mailing">
+              					<span class="checkbox-text">Нет</span>
+              				</label>
+              			</div>
+              			<div class="question">Расскажите, какой контент выхотели бы видеть на нашем сайте?</div>
+              			<textarea class="review-type-of-content" name="type-of-content" required>Может, больше рецептов?
+              			</textarea>
+              			<button type="submit" class="popup-button-submit">Отправить</button>
+            		</form>
+            	</section>
+            </div>
 		</div>
 	</body>
 </html>
